service unavailable changes

--- a/static/service_unavailable/unavailable.html
+++ b/static/service_unavailable/unavailable.html
@@ -26,7 +26,6 @@
       /* 2 */
       -webkit-text-size-adjust: 100%;
       /* 2 */
-      min-height: 100%;
     }
 
     body {
@@ -416,11 +415,7 @@
 /* -------------------------- Footer Styles -------------------------- */
 
     footer {
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      overflow:hidden;
-      position: absolute;
+      display: block;
     }
 
     .link-list {
@@ -432,7 +427,7 @@
       background-color: #005eb8;
       border-top: 4px solid #003087;
       color: #fff;
-      margin-top: 32px;
+      margin-top: 64px;
     }
 
     .global-footer * {
